fixed the background image
It was stretched before. 
Fixed it to original size and centered it using background-position: center;

--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@ body {
     text-align: center;
     font-family: 'Indie Flower', cursive;
     font-weight: 900;
+    background-color: #a39f9f;
     background-image: url("https://wallpapercave.com/wp/kcUVzda.jpg");
-    background-repeat: repeat;
-    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 .grid {
     width: 200px;
